LD1FINALS_2D_DAMIAR.html

--- a/LD1FINALS_2D_DAMIAR.html
+++ b/LD1FINALS_2D_DAMIAR.html
@@ -105,7 +105,7 @@
 
         if (username === correctUsername && password === correctPassword) {
             // Successful login
-            window.location.href = "file:///C:/DAMIAR_WEBDesign/HOMEPAGE.html"; // Redirect to the next page
+            window.location.href = "HOMEPAGE.html"; // Redirect to the next page
         } else {
             // Failed login
             loginAttempts++;
