--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -51,7 +51,7 @@
             <header> <h1>Dream Bridal Wedding</h1></header>
 
             <nav>
-            <a href="LD1FINALS_2D_DAMIAR.html">Log In</a>
+            <a href="index.html">Log In</a>
             <a href="">Home</a>
             <a href="">About Us</a>
             <a href="">Categories</a>
