--- a/web.html
+++ b/web.html
@@ -19,19 +19,19 @@
       </div>
     </div>
     <div class="hero-images">
-      <img src="C:\Users\pc\Downloads\weddingimage.jpg" alt="Couple 1">
-      <img src="C:\Users\pc\Downloads\weddingimage2.jpg" alt="Bouquet">
+      <img src="weddingimage.jpg" alt="Couple 1">
+      <img src="weddingimage2.jpg" alt="Bouquet">
     </div>
   </section>
 
   <section class="instagram">
     <h2>Instagram</h2>
     <div class="instagram-gallery">
-      <img src="C:\Users\pc\Downloads\reception.jpg" alt="Insta 1">
-      <img src= "C:\Users\pc\Downloads\reception2.jpg"alt="Insta 2">
-      <img src= "C:\Users\pc\Downloads\reception3.jpg"alt="Insta 3">
-      <img src= "C:\Users\pc\Downloads\reception4.jpg"alt="Insta 4">
-      <img src="C:\Users\pc\Downloads\reception5.jpg" alt="Insta 5">
+      <img src="reception.jpg" alt="Insta 1">
+      <img src= "reception2.jpg"alt="Insta 2">
+      <img src= "reception3.jpg"alt="Insta 3">
+      <img src= "reception4.jpg"alt="Insta 4">
+      <img src="reception5.jpg" alt="Insta 5">
     </div>
   </section>
 
