--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login</title>
+  <title>Register</title>
   <style>
     body {
       margin: 0;
@@ -50,23 +50,25 @@
       align-items: center;
     }
 
-    .login-container {
+    .register-container {
       width: 100%;
       max-width: 500px;
       padding: 30px;
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: rgba(255, 255, 255, 0.95);
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    .login-container h2 {
+    .register-container h2 {
       text-align: center;
       font-family: 'Georgia', serif;
       color: #987554;
       font-size: 30px;
     }
 
-    .login-container input {
+    .register-container input[type="text"],
+    .register-container input[type="email"],
+    .register-container input[type="password"] {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
@@ -75,29 +77,18 @@
       font-size: 16px;
     }
 
-    .login-container button {
-      width: 100%;
-      padding: 10px;
+    .register-container input[type="submit"] {
       background-color: #987554;
       color: white;
+      padding: 10px;
+      width: 100%;
       border: none;
       border-radius: 10px;
       cursor: pointer;
       font-size: 16px;
-      margin-top: 10px;
     }
 
-    .login-container button:disabled {
-      background-color: #ccc;
-    }
-
-    .error-message {
-      color: red;
-      text-align: center;
-    }
-
-    .login-container input:focus,
-    .login-container button:focus {
+    .register-container input:focus {
       outline: none;
       border-color: #6f4f29;
     }
@@ -120,63 +111,23 @@
       <a href="mywebCategoriesPage.html">Categories</a>
       <a href="mywebContactUs.html">Contact</a>
       <a href="LD1FINALS_2D_DAMIAR.html">Log In</a>
-       <a href="register.html">Register</a>
+      <a href="register.html">Register</a>
     </div>
   </header>
 
   <main>
-    <div class="login-container">
-      <h2>Welcome to Dream Bridal Wedding</h2>
-      <div class="error-message" id="error-message"></div>
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button id="login-btn" onclick="attemptLogin()">Login</button>
-    </div>
+    <form action="register.php" method="POST" class="register-container">
+      <h2>Register</h2>
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="email" name="email" placeholder="Enter your email" required>
+      <input type="password" name="password" placeholder="Enter your password" required>
+      <input type="submit" value="Register">
+    </form>
   </main>
 
   <footer>
     &copy; 2025 Dream Bridal Wedding. All rights reserved.
   </footer>
-
-  <script>
-    let loginAttempts = 0;
-    let lockTimer = null;
-    const maxAttempts = 1;
-
-    function attemptLogin() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-      const errorMessage = document.getElementById('error-message');
-      const loginButton = document.getElementById('login-btn');
-
-      const correctUsername = "admin123";
-      const correctPassword = "admin123";
-
-      if (lockTimer) {
-        errorMessage.textContent = "Too many failed attempts. Please wait 10 seconds.";
-        return;
-      }
-
-      if (username === correctUsername && password === correctPassword) {
-        window.location.href = "web.html";
-      } else {
-        loginAttempts++;
-        if (loginAttempts >= maxAttempts) {
-          errorMessage.textContent = "Incorrect username or password. Please wait 10 seconds.";
-          loginButton.disabled = true;
-
-          lockTimer = setTimeout(() => {
-            loginAttempts = 0;
-            loginButton.disabled = false;
-            errorMessage.textContent = "";
-            lockTimer = null;
-          }, 10000);
-        } else {
-          errorMessage.textContent = "Incorrect username or password.";
-        }
-      }
-    }
-  </script>
 
 </body>
 </html>
